--- a/product4.html
+++ b/product4.html
@@ -72,8 +72,40 @@
 
         <div class="box" style="margin-top:12px">
           <div class="h2">Запретительные факторы</div>
-          <div class="small-block">
-            • ЛНР, ДНР, Республика Крым, Херсонская область, Севастополь; • Белгородская, Курская, Брянская области; • Отдельные районы Воронежской, Ростовской, Краснодарского краевой перечня; • Запорожская область; • Неработоспособное имущество; • Коммерческое использование.
+          <div class="restrictions-list">
+            <div class="restriction-item">✓ Донецкая Народная Республика,</div>
+            <div class="restriction-item">✓ Республика Крым,</div>
+            <div class="restriction-item">✓ Луганская Народная Республика,</div>
+            <div class="restriction-item">✓ Херсонская область,</div>
+            <div class="restriction-item">✓ Севастополь,</div>
+            <div class="restriction-item">✓ Курская область;</div>
+            <div class="restriction-item">✓ Брянская область;</div>
+            <div class="restriction-item">✓ Белгородская область;</div>
+            <div class="restriction-item">
+              ✓ Воронежская область: только следующие районы:
+              <ul class="restriction-sublist">
+                <li>Кантемировский район;</li>
+                <li>Россошанский район;</li>
+              </ul>
+            </div>
+            <div class="restriction-item">
+              ✓ Ростовская область, только следующие районы:
+              <ul class="restriction-sublist">
+                <li>Мясниковский район;</li>
+                <li>Неклиновский район;</li>
+                <li>Азовский район;</li>
+                <li>городской округ город Таганрог;</li>
+                <li>городской округ Азов;</li>
+              </ul>
+            </div>
+            <div class="restriction-item">
+              ✓ Краснодарский край, только следующие районы:
+              <ul class="restriction-sublist">
+                <li>Щербиновский район;</li>
+                <li>Ейский район.</li>
+              </ul>
+            </div>
+            <div class="restriction-item">✓ Запорожская обл.</div>
           </div>
         </div>
       </div>
