--- a/product1.html
+++ b/product1.html
@@ -141,14 +141,29 @@
           <div class="h2">Риски (полный текст)</div>
           <div class="small-block">
             ► Пожар, взрыв, повреждение водой, механическое повреждение, кража, грабеж, разбой, умышленные действия, вред со стороны третьих лиц, стихийное бедствие, теракт, короткое замыкание.<br>
-            ► «Повреждение инженерных систем» — как в правилах. (текст по скрину)
+            ► «Повреждение инженерных систем» — как в правилах.
           </div>
         </div>
 
         <div class="box">
           <div class="h2">Запретительные факторы</div>
-          <div class="small-block">
-            • За пределами РФ, опасные территории; • Износ &gt;= 70%; • Аварийное состояние, под снос, «реновация» и подвальные помещения; • Выведенные из жилого фонда; • Квартиры в деревянном доме, в доме с деревянными или смешанными перекрытиями; • Бараки; • Наличные деньги, драгметаллы, ценные бумаги; • Коммунальные квартиры; • Печное отопление; • Для коммерческих целей; • Аренда &lt; 1 мес.; • Части квартиры выгодоприобретателя.
+          <div class="restrictions-list">
+            <div class="restriction-item">• За пределами РФ, Опасные территории</div>
+            <div class="restriction-item">• Износ 70%</div>
+            <div class="restriction-item">• Аварийное состояние, под снос, «реновация» и подвальные помещения</div>
+            <div class="restriction-item">• Выведенные из жилого фонда</div>
+            <div class="restriction-item">• Для коммерческих целей, в аренде &lt; 1 мес.</div>
+            <div class="restriction-item">• Квартиры в деревянном доме, в доме с деревянными или смешанными перекрытиями</div>
+            <div class="restriction-item">• Бараки, строения барачного типа</div>
+            <div class="restriction-item">• Наличные деньги, драгметаллы, ценные бумаги, расходные материалы, взрывчатые вещества, движимое имущество в неработоспособном состоянии</div>
+            <div class="restriction-item">• Квартиры в деревянном доме, в доме с деревянными или смешанными перекрытиями</div>
+            <div class="restriction-item">• Отделка на стадии строительноремонтных работ</div>
+            <div class="restriction-item">• Квартиры/ комнаты коммунального типа</div>
+            <div class="restriction-item">• ДИ по перечню</div>
+            <div class="restriction-item">• Квартиры с печным отоплением</div>
+            <div class="restriction-item">• Аппаратура и техника в неработоспособном состоянии</div>
+            <div class="restriction-item">• Имущество подлежащее аресту, конфискации и т.п.</div>
+            <div class="restriction-item">• Части квартиры выгодоприобретателя</div>
           </div>
         </div>
 
