--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
         <a href="product4.html" style="text-decoration:none;color:var(--accent)"><div class="h2">Бастион</div></a>
         <div class="small">Защита от военных рисков — лимиты, проверки</div>
       </div>
+
+      <div class="card">
+        <a href="product5.html" style="text-decoration:none;color:var(--accent)"><div class="h2">Платинум Экспресс. Квартира</div></a>
+        <div class="small">Программа страхования с вариантами пакетов</div>
+      </div>
+
+      <div class="card">
+        <a href="product6_dom_bez_zabot.html" style="text-decoration:none;color:var(--accent)"><div class="h2">Дом без забот</div></a>
+        <div class="small">Страхование загородных домов, имущества и ответственности</div>
+      </div>
     </div>
   </main>
 </body>
